Fix Onboarding Modal on mobile devices

--- a/kirakiratter.css
+++ b/kirakiratter.css
@@ -977,6 +977,12 @@ div.drawer__inner div:not(.navigation-bar) div:last-child div:last-child div:nth
   background: linear-gradient(to bottom, rgba(226,72,152,1) 0%,rgba(229,108,172,1) 100%);
 }
 
+.onboarding-modal__paginator > div {
+  /* set Japanese prev/next text same width to align dots center */
+  min-width: 5em;
+  text-align: center;
+}
+
 .onboarding-modal__paginator a span {
   color: #efcfcf;
 }
@@ -992,6 +998,29 @@ div.drawer__inner div:not(.navigation-bar) div:last-child div:last-child div:nth
 .onboarding-modal__dot.active {
   background: #a07774;
   box-shadow: #f5e33a 0px 0px 5px 0px;
+}
+
+/* e.g. Safari on iPhone5 with top/bottom bar (320x460) */
+@media screen and (max-width: 550px) and (max-height: 550px) {
+  .onboarding-modal__page p {
+    font-size: 12px;
+  }
+  .onboarding-modal__paginator {
+    padding: 20px 25px;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .onboarding-modal__page-one {
+    flex-direction: column;
+  }
+
+  .onboarding-modal__page-one__elephant-friend {
+    width: 100%;
+    height: 30vh;
+    margin-bottom: 5vh;
+    background-position: center;
+  }
 }
 
 .onboarding-modal__page-two .non-interactive span {
